--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "the-module",
+    "name": "datestamp",
     "version": "0.0.0",
-    "description": "My awesome module.",
-    "repository": "https://github.com/Richienb/the-module.git",
+    "description": "Convert a Unix timestamp to a Date object.",
+    "repository": "https://github.com/Richienb/datestamp.git",
     "author": "Richie Bendall <richiebendall@gmail.com>",
     "license": "MIT",
     "main": "index.js",
@@ -17,7 +17,12 @@
         "lint": "xo",
         "test": "yarn lint && ava"
     },
-    "keywords": [],
+    "keywords": [
+        "timestamp",
+        "unix",
+        "convert",
+        "math"
+    ],
     "dependencies": {},
     "devDependencies": {
         "ava": "^2.1.0",
